<resources>
    <string name="app_name">stampy</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Main Activity -->
    <string name="tv_timer_min_title">time left until min. working time</string>
    <string name="tv_timer_max_title">time left until max. working time</string>
    <string name="btn_clock_in">clock in</string>
    <string name="btn_clock_out">clock out</string>

    <!-- Settings Activity -->
    <string name="time_header">Time</string>
    <string name="notification_header">Notifications</string>

    <string name="hours_to_work_title">Min. working time</string>
    <string name="max_work_hours_title">Max. working time</string>
    <string name="break_time_title">Break time</string>
    <string name="notification_min_title">Notify if min. working time reached</string>
    <string name="notification_max_title">Notify if max. working time reached</string>
    <string name="notify_before_max_title">Minutes before max. working time</string>
    <string name="notify_before_min_title">Minutes before min. working time</string>

    <!-- Shared Preferences Keys -->
    <string name="sp_hours_to_work">HOURS_TO_WORK</string>
    <string name="sp_max_work_hours">MAX_WORK_HOURS</string>
    <string name="sp_break_time">BREAK_TIME</string>
    <string name="sp_notify_min">NOTIFY_MIN</string>
    <string name="sp_notify_max">NOTIFY_MAX</string>
    <string name="sp_notify_before_max">NOTIFY_BEFORE_MAX</string>
    <string name="sp_notify_before_min">NOTIFY_BEFORE_MIN</string>
    <string name="sp_timer_running">TIMER_RUNNING</string>

    <!-- Default Values -->
    <string name="default_hours_to_work">7.8</string>
    <string name="default_max_work_hours">10.45</string>
    <string name="default_break_time">0.5</string>
    <string name="default_notify_before_max">10</string>
    <string name="default_notify_before_min">10</string>

</resources>