<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/time_header">
        <EditTextPreference
            app:defaultValue="@string/default_hours_to_work"
            app:key="@string/sp_hours_to_work"
            app:title="@string/hours_to_work_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="@string/default_max_work_hours"
            app:key="@string/sp_max_work_hours"
            app:title="@string/max_work_hours_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="@string/default_break_time"
            app:key="@string/sp_break_time"
            app:title="@string/break_time_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notification_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/sp_notify_min"
            app:title="@string/notification_min_title" />

        <EditTextPreference
            app:defaultValue="@string/default_notify_before_min"
            app:dependency="@string/sp_notify_min"
            app:key="@string/sp_notify_before_min"
            app:title="@string/notify_before_min_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/sp_notify_max"
            app:title="@string/notification_max_title" />

        <EditTextPreference
            app:defaultValue="@string/default_notify_before_max"
            app:dependency="@string/sp_notify_max"
            app:key="@string/sp_notify_before_max"
            app:title="@string/notify_before_max_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>