<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    android:paddingVertical="20dp"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/ll_button_area">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_stamp"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/btn_clock_in"
                android:textColor="@color/colorWhite"
                android:elevation="4dp"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_edit_clock_in"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:backgroundTint="@color/colorPrimaryDark"
                android:src="@drawable/ic_outline_edit_24" />

        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="6"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tv_timer_min_title"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/tv_time_min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="time_min"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="50sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tv_timer_max_title"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/tv_time_max"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="time_max"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="50sp" />

    </LinearLayout>


</LinearLayout>